# site-posterior-dist

./: README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
autograder/: Dockerfile
autograder/source/: run_autograder  run_tests.py
site_posterior/: assignment.ipynb  assignment.py  test_assignment.py
